samples/_failures_safe/1761177902_921fe9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_28d43ef8.c: In function ‘tokenize’:
./samples/SAFE/__tmp_28d43ef8.c:158:9: error: expected declaration or statement at end of input
  158 |         tokens[token_count].column = col;
      |         ^~~~~~
./samples/SAFE/__tmp_28d43ef8.c:158:9: error: expected declaration or statement at end of input
